# tc-slackord

./: Cargo.toml  LICENSE
src/: main.rs
taskcluster/: config.yml
taskcluster/docker/tc-slackord/: Dockerfile
taskcluster/kinds/rust/: kind.yml
