[package]
name = "slackord"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
